ui/src/components/SampleGrid/SampleGrid.css
.samples-grid-container {
  width: 100% !important;
  /* margin-top: 1em; */
}


.samples-grid-container form {
  display: inline;
}

.samples-grid {
}

.samples-grid ul {
  margin-left: auto;
  margin-right: auto;
  padding-left: 4em;
  padding-right: 4em;
  list-style-type: none;
}

.samples-grid-row-header{
  padding-left: 2.9em;
  padding-right: 2.9em;
}

.move-arrow {
  position: absolute;
  width: 32px;
  height: 32px;
  z-index: 1000;
  text-align: center;
  line-height: 32px;
  background-color: #fff;
  background-repeat: no-repeat;
  opacity: 0.7;
  border-radius: 15px;
  border: 1px solid #aaa;
}

.move-arrow:hover {
  opacity: 1;
}

.move-arrow-up {
  top: -16px;
  left: 50%;
  margin-left: -16px;
}

.move-arrow-down {
  bottom: -16px;
  left: 50%;
  margin-left: -16px;
}

.move-arrow-left {
  top: 50%;
  left: -16px;
  margin-top: -16px;
}

.move-arrow-right {
  top: 50%;
  right: -16px;
  margin-top: -16px;
}

.samples-grid-li {
  z-index: 2 !important;
}

.samples-grid-li-mv {
  z-index: 3 !important;
}

.samples-grid-item {
  border: 1px solid #aaa;
  background: #fff;
  padding: 5px;
  margin-top: 2px;
  margin-bottom: 2px;
  border-radius: 3px;
  display: inline-block;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
}

.samples-grid-item-moving {
  border: 2px dashed #888;
  padding: 4px;
}

.samples-grid-item-current {
  border: 2px solid #5cb85c;
  padding: 4px;
}

.samples-grid-item-collected {
  background-color: #baf04e;
}

.samples-grid-item-to-be-collected {
  background-color: #cee3f6;
}

.samples-grid-item-button {
  border: 0px;
  border-radius: 4px;
  background: Transparent;
  opacity: 1;
  padding-left: 2px;
  padding-right: 2px;
  border: 1px solid Transparent;
}

button[disabled] {
  opacity: 0.2;
}

.samples-grid-item-button:hover {
  /* border: 1px solid #888; */
}

.samples-grid-item-tasks {
  display: inline-grid;
  width: 185px;
  height: 50px;
  overflow-y: auto;
  overflow-x: hidden;
  grid-template-columns: repeat(4,1fr);
}

.sample-grid-task-item {
  margin: 0px!important;
}

.samples-item-controls-container {
  float: left;
}

.protein-acronym {
  font-size: small;
  font-weight: bold;
  pointer-events: auto;
}

.dm {
  font-size: small;
  font-style: italic;
}

.sc_location {
  font-size: 11px;
  float: right;
  pointer-events: none;
}

.dot {
  height: 7px;
  width: 7px;
  margin-top: 1px;
  margin-right: 1px;
  border-radius: 100%;
  background: green;
  position: absolute;
  right: 0;
  top: 0;
}

.samples-grid-item-selected {
  border: 2px dashed #616161 !important;
  padding: 4px;
}

.btn-link {
  color: #333 !important;
}

.seq-id {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 40px;
  height: 40px;
  margin-top: -20px;
  margin-left: -20px;
  text-align: center;
  line-height: 40px;
  font-style: italic;
  font-weight: bold;
  font-size: 40px;
  color: #222;
  opacity: 1;
}

.queue-order {
  position: absolute;
  right: 5px;
  bottom: 1px;
  margin-left: 0px;
  font-size: 24px;
  line-height: 24px;
  text-align: center;
  font-style: italic;
  font-weight: bold;
  color: #222;
  opacity: 0.3;
}

.selection-rubber-band {
  position: fixed;
  background-color: rgba(1, 152, 255, 0.3);
  border: 1px solid #0198e1;
  display: none;
  z-index: 10;
}

.filter-input-active {
  outline: none;
  border-color: #ffbf00;
  box-shadow: 0 0 7px #ffbf00;
}

.filter-input-active input:focus {
  box-shadow: none;
}

#taskSummaryPopover {
  min-width: 700px !important;
  max-width: 700px !important;
  padding-bottom: 1em;
}


.label-custom-success {
  color: #464646;
  border: 1px solid #ccc;
  border-radius: 5px;
  background-color: #d9edf7;
  font-weight: bolder;
}

